# NotationalInconsistency

./: README.md  config.yaml  figure.ipynb  pubchem.py  pyproject.toml  train.py  voc.py
data/: AllPubchem_test_canonical.pkl  AllPubchem_test_random.pkl  large_vocs.csv
models/: __init__.py  accumulator.py  dataset.py  evaluate.py  hooks.py  metric.py  models2.py  optimizer.py  process.py  train.py
models/datasets/: molecule.py
models/downstream/: downstream03.py
models/modules2/: sequence.py  unimol.py  vae.py
notebooks/data/ADME_datasets_3Dadded/: 10_PPBR_AZ.csv  11_VDss_Lombardo.csv  12_CYP2C19_Veith.csv  13_CYP2D6_Veith.csv  14_CYP3A4_Veith.csv  15_CYP1A2_Veith.csv  16_CYP2C9_Veith.csv  17_CYP2C9_Substrate_CarbonMangels.csv  18_CYP2D6_Substrate_CarbonMangels.csv  19_CYP3A4_Substrate_CarbonMangels.csv  1_Coca2_Wang.csv  20_Half_Life_Obach.csv  21_Clearance_Hepatocyte_AZ.csv  22_Clearance_Microsome_AZ.csv  2_PAMPA_NCATS.csv  3_HIA_Hou.csv  4_Pgp_Broccatelli.csv  5_Bioavailability_Ma.csv  6_Lipophilicity_AstraZeneca.csv  7_Solubility_AqSoIDB.csv  8_HydrationFreeEnergy_FreeSolv.csv  9_BBB_Martins.csv
notebooks/data/ADME_datasets_3Dremoved/: 10_PPBR_AZ.csv  11_VDss_Lombardo.csv  12_CYP2C19_Veith.csv  13_CYP2D6_Veith.csv  14_CYP3A4_Veith.csv  15_CYP1A2_Veith.csv  16_CYP2C9_Veith.csv  17_CYP2C9_Substrate_CarbonMangels.csv  18_CYP2D6_Substrate_CarbonMangels.csv  19_CYP3A4_Substrate_CarbonMangels.csv  1_Coca2_Wang.csv  20_Half_Life_Obach.csv  21_Clearance_Hepatocyte_AZ.csv  22_Clearance_Microsome_AZ.csv  2_PAMPA_NCATS.csv  3_HIA_Hou.csv  4_Pgp_Broccatelli.csv  5_Bioavailability_Ma.csv  6_Lipophilicity_AstraZeneca.csv  7_Solubility_AqSoIDB.csv  8_HydrationFreeEnergy_FreeSolv.csv  9_BBB_Martins.csv
notebooks/data/ADME_datasets_csv/: 1_Caco2_Wang.csv  22_Clearance_Microsome_AZ.csv  2_PAMPA_NCATS.csv
notebooks/data/ADME_datasets_raw/: 10_PPBR_AZ.csv  11_VDss_Lombardo.csv  12_CYP2C19_Veith.csv  13_CYP2D6_Veith.csv  14_CYP3A4_Veith.csv  15_CYP1A2_Veith.csv  16_CYP2C9_Veith.csv  17_CYP2C9_Substrate_CarbonMangels.csv  18_CYP2D6_Substrate_CarbonMangels.csv  19_CYP3A4_Substrate_CarbonMangels.csv  1_Coca2_Wang.csv  20_Half_Life_Obach.csv  21_Clearance_Hepatocyte_AZ.csv  22_Clearance_Microsome_AZ.csv  2_PAMPA_NCATS.csv  3_HIA_Hou.csv  4_Pgp_Broccatelli.csv  5_Bioavailability_Ma.csv  6_Lipophilicity_AstraZeneca.csv  7_Solubility_AqSoIDB.csv  8_HydrationFreeEnergy_FreeSolv.csv  9_BBB_Martins.csv
notebooks/data/ADME_datasets_standard/: 10_PPBR_AZ.csv  11_VDss_Lombardo.csv  12_CYP2C19_Veith.csv  13_CYP2D6_Veith.csv  14_CYP3A4_Veith.csv  15_CYP1A2_Veith.csv  16_CYP2C9_Veith.csv  17_CYP2C9_Substrate_CarbonMangels.csv  18_CYP2D6_Substrate_CarbonMangels.csv  19_CYP3A4_Substrate_CarbonMangels.csv  1_Coca2_Wang.csv  20_Half_Life_Obach.csv  21_Clearance_Hepatocyte_AZ.csv  22_Clearance_Microsome_AZ.csv  2_PAMPA_NCATS.csv  3_HIA_Hou.csv  4_Pgp_Broccatelli.csv  5_Bioavailability_Ma.csv  6_Lipophilicity_AstraZeneca.csv  7_Solubility_AqSoIDB.csv  8_HydrationFreeEnergy_FreeSolv.csv  9_BBB_Martins.csv
notebooks/data/MoleculeNet/: BBBP.csv  bace.csv  clintox.csv  sider.csv  tox21.csv
notebooks/data/MoleculeNet_3Dadded/: BBBP.csv  bace.csv  clintox.csv  sider.csv  tox21.csv  toxcast_data.csv
notebooks/data/MoleculeNet_3Dremoved/: BBBP.csv  bace.csv  clintox.csv  sider.csv  tox21.csv  toxcast_data.csv
notebooks/data/MoleculeNet_raw/: BBBP.csv  clintox.csv  sider.csv  tox21.csv  toxcast_data.csv
notebooks/data/MoleculeNet_standard/: BBBP.csv  bace.csv  clintox.csv  sider.csv  tox21.csv  toxcast_data.csv
scripts/: pubchem.py  train.py  voc.py
src/notate/: __init__.py
src/notate/core/: __init__.py  core.py
src/notate/data/: __init__.py  accumulator.py  dataset.py
src/notate/downstream/: downstream.py
src/notate/modules/: __init__.py  pipeline.py  poolers.py  sequence.py  tunnel.py  vae.py
src/notate/tools/: __init__.py  alarm.py  args.py  logger.py  path.py  tools.py
src/notate/training/: __init__.py  hooks.py  metric.py  optimizer.py  process.py
tools/: .config.swp  .gitignore  README.md  batch.py  bucketing.py  cf.py  gdrive.py  graph.py  logger.py  models.py  path.py  rdkit.py  requirements.txt  smiles.py  time_.py  tokenizer.py  tools.py  torch.py  vscode_setting.py  wakati.py
tools/commands/: apython  spull  spush
tools/past_activities/: bucketing.py  graph.py  optunizer.py
